--- a/WMS/Views/InventoryTransaction/_WastageGridView.cshtml
+++ b/WMS/Views/InventoryTransaction/_WastageGridView.cshtml
@@ -71,7 +71,8 @@
         settings.Columns.Add(c =>
         {
             c.FieldName = "Quantity";
-            c.Settings.AutoFilterCondition = AutoFilterCondition.Contains;
+            c.ColumnType = MVCxGridViewColumnType.SpinEdit;
+            c.Settings.AutoFilterCondition = AutoFilterCondition.Like;
         });
 
         settings.Columns.Add(c =>
