--- a/WMS/Views/TenantDepartment/Index.cshtml
+++ b/WMS/Views/TenantDepartment/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Ganedata.Core.Entities.Helpers
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Tenant Departments";
 }
 @section scripts {
 
