--- a/WMS/Views/Resources/_ResourceListPartial.cshtml
+++ b/WMS/Views/Resources/_ResourceListPartial.cshtml
@@ -81,7 +81,8 @@
         settings.Columns.Add(c =>
         {
             c.FieldName = "PayrollEmployeeNo";
-            c.Settings.AutoFilterCondition = AutoFilterCondition.Contains;
+            c.ColumnType = MVCxGridViewColumnType.SpinEdit;
+            c.Settings.AutoFilterCondition = AutoFilterCondition.Equals;
         });
 
         settings.Columns.Add(c =>
@@ -105,22 +106,24 @@
         });
         settings.Columns.Add(c =>
         {
-            c.FieldName = "ContactNumbers.HomeNumber";
+            c.FieldName = "HomeNumber";
+            c.Caption = "Home Number";
             c.Settings.AutoFilterCondition = AutoFilterCondition.Contains;
         });
         settings.Columns.Add(c =>
         {
-            c.FieldName = "ContactNumbers.MobileNumber";
+            c.FieldName = "MobileNumber";
+            c.Caption = "Mobile Number";
             c.Settings.AutoFilterCondition = AutoFilterCondition.Contains;
         });
         settings.Columns.Add(c =>
         {
-            c.FieldName = "ContactNumbers.Fax";
+            c.FieldName = "Fax";
             c.Settings.AutoFilterCondition = AutoFilterCondition.Contains;
         });
         settings.Columns.Add(c =>
         {
-            c.FieldName = "ContactNumbers.EmailAddress";
+            c.FieldName = "EmailAddress";
             c.Settings.AutoFilterCondition = AutoFilterCondition.Contains;
         });
         settings.Columns.Add(c =>
