fixed filteration issue in account transactions grid Imported from Changeset 2247

--- a/WMS/Views/Account/_AccountList.cshtml
+++ b/WMS/Views/Account/_AccountList.cshtml
@@ -93,7 +93,7 @@
         settings.Columns.Add(c => {
 
             c.FieldName = "OwnerName";
-            c.Caption = "Owner Name";
+            c.Caption = "Acc Owner";
             c.Settings.AutoFilterCondition = AutoFilterCondition.Contains;
 
         });
