adding editable product grid Imported from Changeset 2248

--- a/WMS/Views/Products/_EditableProductGrid.cshtml
+++ b/WMS/Views/Products/_EditableProductGrid.cshtml
@@ -3,11 +3,13 @@
     {
         settings.Name = "ProductEditListGridView";
         settings.CallbackRouteValues = new { Controller = "Products", Action = "_EditableProductGrid" };
+        settings.SettingsEditing.BatchUpdateRouteValues = new { Controller = "Products", Action = "SaveProductEdit" };
         settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-        settings.SettingsEditing.Mode = GridViewEditingMode.Batch;
-        settings.SettingsEditing.BatchEditSettings.EditMode = GridViewBatchEditMode.Cell;
-        settings.SettingsEditing.BatchEditSettings.StartEditAction = GridViewBatchStartEditAction.DblClick;
+         settings.SettingsEditing.Mode = GridViewEditingMode.Batch;
+            settings.SettingsEditing.BatchEditSettings.EditMode = GridViewBatchEditMode.Cell;
+            settings.SettingsEditing.BatchEditSettings.StartEditAction = GridViewBatchStartEditAction.DblClick;
         settings.Settings.ShowStatusBar = GridViewStatusBarMode.Hidden;
+        settings.EnableCallbackAnimation = false;
         settings.CustomBindingRouteValuesCollection.Add(
             GridViewOperationType.Paging,
             new { Controller = "Products", Action = "_ProductEditListPaging" }
@@ -39,57 +41,104 @@
         settings.SettingsAdaptivity.AdaptiveDetailColumnCount = 1;
         settings.SettingsAdaptivity.AllowOnlyOneAdaptiveDetailExpanded = false;
         settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 0;
-
         settings.Columns.Add(c =>
         {
             c.FieldName = "Name";
             c.Settings.AutoFilterCondition = AutoFilterCondition.Contains;
             c.EditFormSettings.Visible = DefaultBoolean.False;
-        });
+            c.EditorProperties().TextBox(p =>
+            {
+                p.ClientSideEvents.LostFocus = "function(s,e){ OnDetailsChanged(s,e);}";
+            });
+            c.EditFormSettings.Visible = DefaultBoolean.True;
 
+        });
         settings.Columns.Add(c =>
         {
             c.FieldName = "SKUCode";
             c.Settings.AutoFilterCondition = AutoFilterCondition.Contains;
             c.EditFormSettings.Visible = DefaultBoolean.False;
-        });
-
-        settings.Columns.Add(c =>
-        {
-            c.FieldName = "Serialisable";
-            c.ColumnType = MVCxGridViewColumnType.CheckBox;
-            (c.PropertiesEdit as CheckBoxProperties).DisplayTextChecked = "True";
-            (c.PropertiesEdit as CheckBoxProperties).DisplayTextUnchecked = "False";
-            c.EditorProperties().CheckBox(p =>
+            c.EditorProperties().TextBox(p =>
             {
                 p.ClientSideEvents.LostFocus = "function(s,e){ OnDetailsChanged(s,e);}";
             });
             c.EditFormSettings.Visible = DefaultBoolean.True;
+        });
+        settings.Columns.Add(c =>
+        {
+            c.FieldName = "Serialisable";
+            c.ColumnType = MVCxGridViewColumnType.CheckBox;
+           c.EditFormSettings.Visible = DefaultBoolean.True;
+            c.EditorProperties().CheckBox(p =>
+            {
+                p.ClientSideEvents.LostFocus = "function(s,e){ OnDetailsChanged(s,e);}";
+            });
 
 
         });
         settings.Columns.Add(c =>
         {
             c.FieldName = "ProcessByPallet";
+             c.ColumnType = MVCxGridViewColumnType.CheckBox;
+            c.EditFormSettings.Visible = DefaultBoolean.True;
+            c.EditorProperties().CheckBox(p =>
+            {
+                p.ClientSideEvents.LostFocus = "function(s,e){ OnDetailsChanged(s,e);}";
+            });
+
+        });
+        settings.Columns.Add(c =>
+        {
+            c.FieldName = "TopProduct";
             c.ColumnType = MVCxGridViewColumnType.CheckBox;
-            (c.PropertiesEdit as CheckBoxProperties).DisplayTextChecked = "True";
-            (c.PropertiesEdit as CheckBoxProperties).DisplayTextUnchecked = "False";
+            c.EditFormSettings.Visible = DefaultBoolean.True;
+            c.EditorProperties().CheckBox(p =>
+            {
+                p.ClientSideEvents.LostFocus = "function(s,e){ OnDetailsChanged(s,e);}";
+            });
+            
+
+        });
+        settings.Columns.Add(c =>
+        {
+            c.FieldName = "BestSellerProduct";
+            c.ColumnType = MVCxGridViewColumnType.CheckBox;
+            c.EditorProperties().CheckBox(p =>
+            {
+                p.ClientSideEvents.LostFocus = "function(s,e){ OnDetailsChanged(s,e);}";
+            });
+            c.EditFormSettings.Visible = DefaultBoolean.True;
+
+        });
+        settings.Columns.Add(c =>
+        {
+            c.FieldName = "SpecialProduct";
+            c.ColumnType = MVCxGridViewColumnType.CheckBox;
+            c.EditorProperties().CheckBox(p =>
+            {
+                p.ClientSideEvents.LostFocus = "function(s,e){ OnDetailsChanged(s,e);}";
+            });
+            c.EditFormSettings.Visible = DefaultBoolean.True;
+
+        });
+        settings.Columns.Add(c =>
+        {
+            c.FieldName = "OnSaleProduct";
+            c.ColumnType = MVCxGridViewColumnType.CheckBox;
+            c.EditorProperties().CheckBox(p =>
+            {
+                p.ClientSideEvents.LostFocus = "function(s,e){ OnDetailsChanged(s,e);}";
+            });
             c.EditFormSettings.Visible = DefaultBoolean.True;
 
         });
 
-        settings.Columns.Add(c =>
-        {
-            c.FieldName = "InStock";
-            c.ColumnType = MVCxGridViewColumnType.SpinEdit;
-            c.Settings.AutoFilterCondition = AutoFilterCondition.Equals;
-            c.EditFormSettings.Visible = DefaultBoolean.False;
-        });
 
 
-        settings.ClientSideEvents.BeginCallback = "function(s,e){ OnBeginGridCallback(s, e); }";
-        settings.ClientSideEvents.FocusedCellChanging = "OnSpecialPricesGridFocusChanged";
-        settings.ClientSideEvents.EndCallback = "OnEndGridCallback";
+
+        settings.ClientSideEvents.BeginCallback = "function(s,e){ OnBeginEditGridCallback(s, e); }";
+        settings.ClientSideEvents.FocusedCellChanging = "OnEditGridFocusChanged";
+        settings.ClientSideEvents.EndCallback = "OnEndEditGridCallback";
 
         settings.SettingsPager.PageSizeItemSettings.Visible = true;
         settings.SettingsPager.PageSizeItemSettings.Items = new string[] { "10", "20", "50" };
