--- a/WMS/Views/Products/EditProducts.cshtml
+++ b/WMS/Views/Products/EditProducts.cshtml
@@ -17,41 +17,57 @@
 }
 
 @{
-    ViewBag.Title = "Products List";
+
+    ViewBag.Title = "Edit Products List";
 }
 <h2><span>Edit Products</span></h2>
 
 
 <script type="text/javascript">
 
-    MVCxClientGlobalEvents.AddControlsInitializedEventHandler(OnBeginGridCallback);
+    MVCxClientGlobalEvents.AddControlsInitializedEventHandler(OnBeginEditGridCallback);
 
-    function OnBeginGridCallback(s, e) {
+    function OnBeginEditGridCallback(s, e) {
 
         debugger;
         e.customArgs = MVCxClientUtils.GetSerializedEditorValuesInContainer("frmEditProducts");
-        //WORKAROUND for BULK Update
+        var test=MVCxClientUtils.GetSerializedEditorValuesInContainer("options");
         var gridValues = JSON.parse(JSON.stringify($("#frmEditProducts").serializeArray()));
-        var values = gridValues[gridValues.length - 1].value.split(',');
-
-        for (var i = 0; i < gridValues.length - 1; i++) {
-            if (gridValues[i].name == 'ProductEditListGridView$DXEditor2') {
-                e.customArgs["SpecialPrice"] = gridValues[i].value;
-            }
-            if (gridValues[i].name == 'ProductEditListGridView$DXEditor3') {
-                e.customArgs["StartDate"] = gridValues[i].value;
-            }
-            if (gridValues[i].name == 'ProductEditListGridView$DXEditor4') {
-                e.customArgs["EndDate"] = gridValues[i].value;
-            }
+        var values = JSON.parse(gridValues[gridValues.length - 1].value.split(','));
+        e.customArgs["data"] = values;
+        if (values.ProductEditListGridView_DXEditor0 != null) {
+            e.customArgs["Name"] = values.ProductEditListGridView_DXEditor0;
         }
+        if (values.ProductEditListGridView_DXEditor1 != null)
+        {
+            e.customArgs["SKUCode"] = values.ProductEditListGridView_DXEditor1;
+        }
+        if (values.ProductEditListGridView_DXEditor2 != null) {
+            e.customArgs["Serialisable"] = values.ProductEditListGridView_DXEditor2;
 
+        }
+        if (values.ProductEditListGridView_DXEditor3 != null) {
+            e.customArgs["ProcessByPallet"] = values.ProductEditListGridView_DXEditor3;
+        }
+        if (values.ProductEditListGridView_DXEditor4 != null) {
+            e.customArgs["TopProduct"] = values.ProductEditListGridView_DXEditor4;
+        }
+        if (values.ProductEditListGridView_DXEditor5 != null) {
+            e.customArgs["BestSellerProduct"] = values.ProductEditListGridView_DXEditor5;
+        }
+        if (values.ProductEditListGridView_DXEditor6 != null) {
+
+            e.customArgs["SpecialProduct"] = values.ProductEditListGridView_DXEditor6;
+        }
+        if (values.ProductEditListGridView_DXEditor7 != null) {
+            e.customArgs["OnSaleProduct"] = values.ProductEditListGridView_DXEditor7;
+        }
         var rowIndex = parseInt($("#RowIndexForProductId").val()) || 0;
-
         e.customArgs["ProductID"] = ProductEditListGridView.GetRowKey(rowIndex);
+
     }
 
-    function OnEndGridCallback(s, e) {
+    function OnEndEditGridCallback(s, e) {
         var lastIndex = parseInt($("#LastEditingRowIndex").val()) || 0;
         SetGridEditorToRowIndex(lastIndex);
     }
@@ -64,14 +80,13 @@
         ProductEditListGridView.UpdateEdit();
     }
 
-    function OnSpecialPricesGridFocusChanged(s, e) {
+    function OnEditGridFocusChanged(s, e) {
 
-        if (e.cellInfo.rowVisibleIndex > 0) {
-
-            $("#LastEditingRowIndex").val(e.cellInfo.rowVisibleIndex);
+        if (e.cellInfo.rowVisibleIndex >= 0) {
+            var index = e.cellInfo.rowVisibleIndex;
+            $("#LastEditingRowIndex").val(index);
+            $("#RowIndexForProductId").val(index);
         }
-
-        $("#RowIndexForProductId").val(e.cellInfo.rowVisibleIndex);
         $("#LastEditingColIndex").val(e.cellInfo.column.fieldName);
     }
 
