Made some bug fixes found in some grids Imported from Changeset 2249

--- a/WMS/Views/MarketJob/_GridPartial.cshtml
+++ b/WMS/Views/MarketJob/_GridPartial.cshtml
@@ -43,8 +43,21 @@
         });
         settings.Columns.Add("Name", "Title").Width = System.Web.UI.WebControls.Unit.Percentage(20);
         settings.Columns.Add("Description", "Job Description").Width = System.Web.UI.WebControls.Unit.Percentage(20);
-        settings.Columns.Add("Reason", "Reason").Width = System.Web.UI.WebControls.Unit.Percentage(20);
-        settings.Columns.Add("MarketJobStatusEnum", "Status").Settings.AllowAutoFilter = DefaultBoolean.False;
+        settings.Columns.Add(c =>
+        {
+            c.FieldName = "Reason";
+            c.Caption = "Reason";
+            c.Width = System.Web.UI.WebControls.Unit.Percentage(20);
+            c.Settings.AllowAutoFilter = DefaultBoolean.False;
+            c.Settings.AllowSort = DefaultBoolean.False;
+        });
+        settings.Columns.Add(c =>
+        {
+            c.FieldName = "MarketJobStatusEnum";
+            c.Caption = "Status";
+            c.Settings.AllowAutoFilter = DefaultBoolean.False;
+            c.Settings.AllowSort = DefaultBoolean.False;
+        });
         settings.Columns.Add("DisplayText", "Market Route Vehicle").Width = System.Web.UI.WebControls.Unit.Percentage(15);
         settings.Columns.Add(column =>
         {
