--- a/WMS/Views/Roles/_RolesListGridPartial.cshtml
+++ b/WMS/Views/Roles/_RolesListGridPartial.cshtml
@@ -17,7 +17,13 @@
         settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 0;
 
         settings.KeyFieldName = "Id";
-        settings.Columns.Add("Id").Width = System.Web.UI.WebControls.Unit.Percentage(20);
+        settings.Columns.Add(c =>
+        {
+            c.FieldName = "Id";
+            c.Width = System.Web.UI.WebControls.Unit.Percentage(20);
+            c.ColumnType = MVCxGridViewColumnType.SpinEdit;
+            c.Settings.AutoFilterCondition = AutoFilterCondition.Equals;
+        });
         settings.Columns.Add("RoleName").Width = System.Web.UI.WebControls.Unit.Percentage(60);
 
         settings.Columns.Add(column =>
